# z80

./: .travis.yml  LICENSE  README.md  z80.cabal
src/: Z80.hs
src/Z80/: Assembler.hs  Macros.hs  Operands.hs  Operations.hs
src/Z80/Operands/: LowerCase.hs
tests/: ex.asm  ex.hs  tests.hs
