name:                z80
version:             0.1.0.0
synopsis:            A Z80 assembler embedded in Haskell
description:         A Z80 assembler embedded in Haskell
homepage:            https://github.com/dpwright/z80
license:             MIT
license-file:        LICENSE
author:              Daniel P. Wright
maintainer:          dani@dpwright.com
copyright:           (c) 2015 Daniel P. Wright
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Z80,
                       Z80.Assembler,
                       Z80.Operations,
                       Z80.Operands,
                       Z80.Operands.LowerCase,
                       Z80.Macros
  build-depends:       base >=4.7 && <4.9,
                       bytestring,
                       mtl
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             tests.hs
  build-depends:       base >=4.7 && <4.9,
                       bytestring,
                       mtl,
                       HUnit,
                       tasty,
                       tasty-hunit
  hs-source-dirs:      tests, src
  ghc-options:         -Wall
  default-language:    Haskell2010